--- a/3/CNN_fruits_Keras.ipynb
+++ b/3/CNN_fruits_Keras.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "import sys\n",
+    "from matplotlib import pyplot\n",
+    "from keras.utils import to_categorical\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Conv2D\n",
+    "from keras.layers import MaxPooling2D\n",
+    "from keras.layers import Dense\n",
+    "from keras.layers import Flatten\n",
+    "from keras.optimizers import SGD\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1323,17 +1350,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0807 12:20:29.051885 139686126925568 deprecation_wrapper.py:119] From /home/lazafi/labor/ml-2019/male2019/3/env/lib/python3.5/site-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "W0807 12:20:29.074297 139686126925568 deprecation_wrapper.py:119] From /home/lazafi/labor/ml-2019/male2019/3/env/lib/python3.5/site-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "W0807 12:20:29.078550 139686126925568 deprecation_wrapper.py:119] From /home/lazafi/labor/ml-2019/male2019/3/env/lib/python3.5/site-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "\n",
+      "W0807 12:20:29.102185 139686126925568 deprecation_wrapper.py:119] From /home/lazafi/labor/ml-2019/male2019/3/env/lib/python3.5/site-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "\n",
+      "W0807 12:20:29.171563 139686126925568 deprecation_wrapper.py:119] From /home/lazafi/labor/ml-2019/male2019/3/env/lib/python3.5/site-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
+      "W0807 12:20:29.187174 139686126925568 deprecation_wrapper.py:119] From /home/lazafi/labor/ml-2019/male2019/3/env/lib/python3.5/site-packages/keras/backend/tensorflow_backend.py:3295: The name tf.log is deprecated. Please use tf.math.log instead.\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start time:  2019-08-06 11:20:19.248527\n",
-      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
+      "Start time:  2019-08-07 12:20:29.050525\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
@@ -1351,15 +1402,30 @@
       "Trainable params: 51,385,118\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
-      "Found 792 images belonging to 30 classes.\n",
-      "Found 179 images belonging to 30 classes.\n",
-      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0807 12:20:29.366547 139686126925568 deprecation.py:323] From /home/lazafi/labor/ml-2019/male2019/3/env/lib/python3.5/site-packages/tensorflow/python/ops/math_grad.py:1250: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
-      "Use tf.cast instead.\n",
-      "> 27.933\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "W0807 12:20:29.434652 139686126925568 deprecation_wrapper.py:119] From /home/lazafi/labor/ml-2019/male2019/3/env/lib/python3.5/site-packages/keras/backend/tensorflow_backend.py:986: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 679 validated image filenames belonging to 30 classes.\n",
+      "Found 292 validated image filenames belonging to 30 classes.\n",
+      "> 5.822\n",
       "Plots...\n",
-      "Stop time:  2019-08-06 11:34:53.649328\n",
-      "Training time:  0:14:34.400801\n"
+      "Stop time:  2019-08-07 12:31:59.659034\n",
+      "Training time:  0:11:30.608509\n"
      ]
     }
    ],
@@ -1377,6 +1443,8 @@
     "from keras.layers import Flatten\n",
     "from keras.optimizers import SGD\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "from src.fruits.helper import *\n",
     "\n",
     "start = datetime.now()\n",
     "print('Start time: ', start)\n",
@@ -1435,10 +1503,12 @@
     "    # create data generator\n",
     "    datagen = ImageDataGenerator(rescale=1.0/255.0)\n",
     "    # prepare iterators\n",
-    "    train_it = datagen.flow_from_directory(new_dataset_path + 'train/',\n",
-    "        class_mode='categorical', batch_size = batchsize, target_size=target_size)\n",
-    "    test_it = datagen.flow_from_directory(new_dataset_path + 'test/',\n",
-    "        class_mode='categorical', batch_size = batchsize, target_size=target_size)\n",
+    "    fruit_data = FIDS30DataSet(path=\"/home/lazafi/labor/ml-2019/male2019/3/data/FIDS30\", images=False)\n",
+    "    (df_train, df_test) = fruit_data.getDataFrames(ratio=0.3)\n",
+    "\n",
+    "    train_it = datagen.flow_from_dataframe(df_train, batch_size=64, target_size=(224, 224))\n",
+    "    test_it = datagen.flow_from_dataframe(df_test, batch_size=64, target_size=(224, 224))\n",
+    "\n",
     "    # fit model\n",
     "    history = model.fit_generator(train_it, steps_per_epoch=len(train_it),\n",
     "        validation_data=test_it, validation_steps=len(test_it), epochs = epochs_nr, verbose=0)\n",
@@ -1467,14 +1537,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start time:  2019-08-06 11:55:11.411759\n",
+      "Start time:  2019-08-07 12:33:54.157208\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
@@ -1512,12 +1582,8 @@
       "Trainable params: 14,025,278\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
-      "Found 792 images belonging to 30 classes.\n",
-      "Found 179 images belonging to 30 classes.\n",
-      "> 39.665\n",
-      "Plots...\n",
-      "Stop time:  2019-08-06 12:19:01.304184\n",
-      "Training time:  0:23:49.892425\n"
+      "Found 679 validated image filenames belonging to 30 classes.\n",
+      "Found 292 validated image filenames belonging to 30 classes.\n"
      ]
     }
    ],
@@ -1579,10 +1645,12 @@
     "    # create data generator\n",
     "    datagen = ImageDataGenerator(rescale=1.0/255.0)\n",
     "    # prepare iterators\n",
-    "    train_it = datagen.flow_from_directory(new_dataset_path + 'train/',\n",
-    "        class_mode='categorical', batch_size=64, target_size=(224, 224))\n",
-    "    test_it = datagen.flow_from_directory(new_dataset_path + 'test/',\n",
-    "        class_mode='categorical', batch_size=64, target_size=(224, 224))\n",
+    "    \n",
+    "    fruit_data = FIDS30DataSet(path=\"/home/lazafi/labor/ml-2019/male2019/3/data/FIDS30\", images=False)\n",
+    "    (df_train, df_test) = fruit_data.getDataFrames(ratio=0.3)\n",
+    "\n",
+    "    train_it = datagen.flow_from_dataframe(df_train, batch_size=64, target_size=(224, 224))\n",
+    "    test_it = datagen.flow_from_dataframe(df_test, batch_size=64, target_size=(224, 224))\n",
     "    # fit model\n",
     "    history = model.fit_generator(train_it, steps_per_epoch=len(train_it), validation_data=test_it, validation_steps=len(test_it), epochs=50, verbose=0)\n",
     "    # evaluate model\n",
@@ -2223,7 +2291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
